--- a/home/home.css
+++ b/home/home.css
@@ -175,6 +175,7 @@ body {
     margin-top: 30px;
     list-style: none;
     padding-left: 0;
+    letter-spacing: 0px;
     /* animation: FadeIn 4.2s linear; */
     /* overflow: hidden; */
 }
@@ -218,6 +219,7 @@ i{
     .social-media {
         bottom: 1%;
         left: -3%;
+        letter-spacing: 0px;
     }
     .about-us-heading {
         font-size: 50px;
@@ -234,6 +236,7 @@ i{
     .social-media {
         bottom: 1%;
         left: -8%;
+        letter-spacing: 0px;
     }
     .about-us-heading {
         font-size: 30px;
