--- a/css/events.css
+++ b/css/events.css
@@ -352,12 +352,13 @@ body {
             width: 33%;
             height: 90px;
             line-height: 30px;
+            margin-bottom: 40px;
             vertical-align: middle;
         }
         .eventName img {
             width: 60%;
             height: 85%;
-            margin-bottom: 40px;
+            /*margin-bottom: 40px;*/
         }
         .eventDescription {
             max-height: 350px;
