--- a/css/events.css
+++ b/css/events.css
@@ -77,7 +77,7 @@ body {
 }
 
 .clubList li {
-    display: inline;
+    /*display: inline;*/
     margin-right: 2%;
 }
 
@@ -312,7 +312,7 @@ body {
     }
     .clubName {
         padding: 10px 20px;
-        width: 50%;
+        /*width: 50%;*/
         margin-left: 25%;
     }
     .events {
