chore:minor changes

--- a/home/home.css
+++ b/home/home.css
@@ -86,7 +86,7 @@ body {
 
 #main-container div#maroon {
     /* background-color:black; */
-    background-image: url("../images/crossbackground.png");
+    background-image: url("../images/background.jpg");
    /* background-size: 100%;*/
     /*background-repeat: no-repeat*/;
    /* background-attachment: fixed; */
