--- a/style/style.css
+++ b/style/style.css
@@ -645,3 +645,52 @@ main .content {
     max-width: 50%;
   }
 }
+
+/* Event Registration Button - To firebase app */
+.event-reg-btn {
+  width: 200px;
+  font-size: 16px;
+  font-weight: 600;
+  cursor: pointer;
+  margin: 20px;
+  height: 55px;
+  text-align: center;
+  border: none;
+  background-size: 300% 100%;
+  position: absolute;
+  right: 0;
+  z-index: 10;
+
+  border-radius: 50px;
+  -o-transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+@media screen and (max-width: 700px) {
+  .event-reg-btn {
+    width: 100px;
+    height: 85px;
+  }
+}
+
+.event-reg-btn:hover {
+  background-position: 100% 0;
+  -o-transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+.event-reg-btn:focus {
+  outline: none;
+}
+
+.event-reg-btn.color-1 {
+  background-image: linear-gradient(
+    to right,
+    #25aae1,
+    #40e495,
+    #30dd8a,
+    #2bb673
+  );
+  /* box-shadow: 0 4px 15px 0 rgba(49, 196, 190, 0.75); */
+}
