--- a/style/style.css
+++ b/style/style.css
@@ -651,11 +651,12 @@ main .content {
   width: 200px;
   font-size: 16px;
   font-weight: 600;
+  color: #2ca25f;
   cursor: pointer;
   margin: 20px;
   height: 55px;
   text-align: center;
-  border: none;
+  /* border: none; */
   background-size: 300% 100%;
   position: absolute;
   right: 0;
@@ -668,8 +669,9 @@ main .content {
 }
 @media screen and (max-width: 700px) {
   .event-reg-btn {
-    width: 100px;
-    height: 85px;
+    width: 90px;
+    height: 65px;
+    font-size: 12px;
   }
 }
 
@@ -678,6 +680,7 @@ main .content {
   -o-transition: all 0.4s ease-in-out;
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
+  color: white;
 }
 
 .event-reg-btn:focus {
@@ -685,12 +688,14 @@ main .content {
 }
 
 .event-reg-btn.color-1 {
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     to right,
     #25aae1,
     #40e495,
     #30dd8a,
     #2bb673
-  );
-  /* box-shadow: 0 4px 15px 0 rgba(49, 196, 190, 0.75); */
+  ); */
+  background: none;
+  border-color: white;
+  box-shadow: 0 4px 15px 0 rgba(49, 196, 190, 0.75);
 }
